# SUMA

./: .gitignore  Cargo.toml  README.md  pyproject.toml
crates/suma_cli/: Cargo.toml  demo.suma  demo_final.suma
crates/suma_cli/src/: cli.rs  main.rs
crates/suma_cli/src/commands/: info.rs  run.rs
crates/suma_codex/: Cargo.toml  README.md  finance.suma  idea.suma
crates/suma_codex/docs/: scratch.md  should_be.md
crates/suma_codex/src/: lib.rs  outputs.rs
crates/suma_codex/src/ast/: mod.rs
crates/suma_codex/src/domains/: mod.rs
crates/suma_codex/src/domains/boolean_algebra/: ast.rs  grammar.pest  mod.rs  parser.rs
crates/suma_codex/src/domains/linear_algebra/: ast.rs  grammar.pest  mod.rs  parser.rs
crates/suma_codex/src/domains/optimization/: ast.rs  grammar.pest  mod.rs  parser.rs
crates/suma_codex/src/domains/queries/: ast.rs  grammar.pest  parser.rs
crates/suma_codex/src/engine/: dispatcher.rs  executor.rs  mod.rs
crates/suma_codex/src/engine/adapters/: linear_algebra.rs  mod.rs  optimization.rs
crates/suma_codex/src/parsers/: codex.pest  codex_parser.rs  mod.rs  traits.rs  utils.rs
crates/suma_codex/src/utils/: mod.rs  text.rs
crates/suma_core/: Cargo.toml
crates/suma_core/src/: error.rs  lib.rs
crates/suma_core/src/boolean_algebra/: boolean_expr.rs  mod.rs
crates/suma_core/src/core/: mod.rs  (+1 more)
crates/suma_py/: Cargo.toml
crates/suma_py/src/: lib.rs
crates/suma_py/src/bindings/: boolean_algebra.rs  conversions.rs
crates/suma_py/src/bindings/networking/: flsm_calculator.rs  mod.rs  subnet_row.rs  utils.rs  vlsm_calculator.rs
docs/: networking_api.md  uc.txt
infile/: import.py
src/: lib.rs
src/bindings/: boolean_algebra.rs  data_structures.rs  mod.rs  networking.rs
src/bindings/networking/: flsm_calculator.rs  mod.rs  subnet_calculator.rs  subnet_row.rs  vlsm_calculator.rs
src/core/: mod.rs
src/core/boolean_algebra/: boolean_expr.rs  error.rs  mod.rs  truth_table.rs
src/core/data_structures/: mod.rs
src/core/formatting/: csv.rs  export.rs  export_test.rs  formats.rs  json.rs  markdown.rs  mod.rs  utils.rs  xml.rs  yaml.rs
src/core/networking/: mod.rs
suma_core/: Cargo.toml
suma_core/src/core/: error.rs  mod.rs
suma_core/src/core/boolean_algebra/: boolean_expr.rs
suma_core/src/core/data_structures/graphs/algorithms/: a_star.rs  mod.rs  search.rs  sort.rs
suma_core/src/core/data_structures/graphs/implementations/: dag.rs  directed_simple.rs  mod.rs  undirected_weighted.rs
suma_core/src/core/data_structures/graphs/traits/: directed.rs  undirected.rs
suma_core/src/core/formatting/: macros.rs  mod.rs  utils.rs  visualizable.rs
suma_core/src/core/probability/: mod.rs
suma_core/src/core/probability/bayes/: mod.rs
suma_core/src/core/probability/bayes/algorithms/: sampling.rs
suma_core/src/core/probability/bayes/implementations/: CPTs.rs  bayesian_network.rs  mod.rs
suma_core/src/core/probability/bayes/models/: BN_base.rs
suma_core/src/core/probability/utils/: mod.rs  random.rs  serialize.rs
suma_ulsa/: __init__.py  boolean_algebra.py  suma_ulsa.cp313-win_amd64.pyd  suma_ulsa_native.cp313-win_amd64.pyd
suma_ulsa/_internal/: __init__.py
suma_ulsa/boolean_algebra/: __init__.py  boolean_algebra.pyi
suma_ulsa/conversions/: __init__.py  conversions.py  conversions.pyi
suma_ulsa/networking/: __init__.py  networking.py  networking.pyi
usability/: x.ipynb
(+154 files in other folders)
