[package]
name = "suma_core"
description = "A core library for suma_ulsa, used for academics methods and data processing."
license = "MIT"
version = "0.1.1"
edition = "2024"

[dependencies]
csv = "1.4.0"
num-traits = "0.2.19"
ordered-float = "5.1.0"
rust_xlsxwriter = "0.92.0"
serde = {version =  "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
thiserror = "2.0.17"
