[package]
name = "suma_codex"
version = "0.1.0"
edition = "2024"

[lib]
name = "suma_codex"
path = "src/lib.rs" 

[dependencies]
pest = "2.8.4"
pest_derive = "2.8.4"
serde = { version = "1.0", features = ["derive"] }
suma_core = "0.1.18"

[dev-dependencies]
insta = { version = "1.39", features = ["yaml"] }
