[package]
name = "suma_codex"
version = "0.1.0"
edition = "2024"

[lib]
name = "suma_codex"
path = "src/lib.rs" 

[dependencies]
anyhow = "1.0.100"
colored = "3.0.0"
pest = "2.8.4"
pest_derive = "2.8.4"
serde = { version = "1.0", features = ["derive"] }
suma_core = { path = "../suma_core" }

[dev-dependencies]
insta = { version = "1.39", features = ["yaml"] }
